# imgengine

./: .gitignore  FastAPI_readme.md  README.md  docker_md.md  next.md  show_module.sh
imgengine/: CMakeLists-Instructions.md  CMakeLists.txt  cmake-instructions.md  dependency_graph.dot  folder-structer.md  include_guard_check.sh  layer_graph.dot  master_folder_structer.md  show_module.sh
imgengine-saas/api-service/: Dockerfile  pyproject.toml
imgengine-saas/api-service/app/: main.py
imgengine/api/v1/: img_api.h  img_beffer.h  img_buffer_utils.h  img_compat.h  img_core.h  img_defaults.h  img_error.h  img_job.h  img_pipeline.c  img_pipeline.h  img_plugin_api.h  img_task.h  img_types.h  img_types_removed.h
imgengine/arch/: arch_interface.h  arch_kernels.h  cpu_caps.h
imgengine/cli/: main.c
imgengine/cmd/bench/: lat_bench.c
imgengine/cmd/imgengine/: args.c  args.h  main.c
imgengine/docs/: RFC_L10.MD
imgengine/include/api/: api_benchmark_internal.h  api_init_internal.h  api_internal.h  api_job_finish_output_internal.h  api_job_internal.h  api_process_fast_internal.h  api_process_raw_internal.h  api_shutdown_internal.h  io_vtable.h
imgengine/include/arch/: arch_interface.h  cpu_caps.h  resize_params.h
imgengine/include/cold/: debug.h  error.h  validation.h
imgengine/include/core/: align.h  arch_interface.h  batch.h  buffer.h  buffer_lifecycle.h  context_internal.h  core_types.h  cpu_caps.h  pipeline_types.h  result.h  time.h
imgengine/include/hot/: batch_exec.h  pipeline_exec.h  pipeline_exec_inline.h
imgengine/include/imgengine/: api.h  border.h  common.h  context.h  crop.h  error.h  image.h  io.h  layout.h  memory_pool.h  resize.h
imgengine/include/io/: io_vfs.h  io_vtable.h  streaming_decoder_internal.h  zero_copy_contract.h
imgengine/include/memory/: align.h  arena.h  poison.h  slab.h  slab_internal.h
imgengine/include/observability/: binlog.h  binlog_fast.h  logger.h  logger_internal.h  metrics.h  profiler.h  tracing.h
imgengine/include/pipeline/: batch.h  batch_exec.h  border.h  canvas.h  canvas_internal.h  dispatch.h  engine.h  fused_params.h  generated.h  hardware_registry.h  job.h  job_presets.h  job_templates.h  jump_table.h  jump_table_init_internal.h  kernel_adapter.h  kernel_types.h  layout.h  layout_grid_internal.h  layout_resize.h  layout_resize_internal.h  pipeline.h  pipeline_compiled.h  pipeline_compiled_removed.h  pipeline_fuse_exec_internal.h  pipeline_fuse_internal.h  pipeline_fused.h  pipeline_signature.h  pipeline_types.h  plugin_abi.h  render_cache.h  scheduler.h  trace.h
imgengine/include/plugins/: plugin_internal_removed.h  plugin_registry_internal.h
imgengine/include/runtime/: backpressure.h  benchmark_hot.h  buffer_lifecycle.h  cluster_registry.h  exec_router.h  job_exec.h  plugin_loader_internal.h  queue_internal.h  queue_mpmc.h  queue_spsc.h  rpc_client_internal.h  rpc_server_internal.h  scheduler.h  task.h  template_registry.h  worker.h  worker_internal.h
imgengine/include/security/: bounds_check.h  input_validator.h  poision.h  sandbox.h  sandbox_internal.h
imgengine/include/startup/: engine_init_internal.h
imgengine/io/: io_vfs.h
imgengine/io/decoder/: jpeg_decoder.c  stb_bridge.c
imgengine/io/encoder/: jpeg_encoder.c  output_write.h  output_writer.c
imgengine/io/vfs/: memory_stream.c  posix_io.c  s3_adapter.c
imgengine/memory/: arena.c  arena.h  hugepage.c  hugepage.h  memory.h  numa.c  numa.h  slab.c  slab.h
imgengine/observability/: logger.c  logger.h  metrics.c  metrics.h  profiler.h  tracing.c  tracing.h
imgengine/pipeline/: engine.c  engine.h  graph.c  hardware_registry.c  hardware_registry.h  jump_table.c  jump_table.h  pipeline.h  registry.c  registry.h  scheduler.c  scheduler.h
imgengine/plugins/: plugin_crop.c  plugin_crop.h  plugin_grayscale.c  plugin_internal.h  plugin_registry.c  plugin_resize.c  plugin_resize.h
imgengine/runtime/: affinity.c  affinity.h  backpressure.c  backpressure.h  queue_internal.h  queue_spsc.c  queue_spsc.h  runtime.h  worker.c  worker.h
imgengine/scripts/: L10PlusPlus.py  add_file_path.py  check_exported_symbols.py  check_headers.py  clang-format-check.py  how_to_run.md  l10plusplus.py  perf.sh  production_benchmark.sh
imgengine/security/: bounds_check.h  input_validator.c  poision.h  sandbox.c  sandbox.h
imgengine/src/api/: api.c  api_benchmark_hot.c  api_decode_secure.c  api_encoded.c  api_file_mmap.c  api_helpers.c  api_init.c  api_init_engine.c  api_init_reset_engine.c  api_init_reset_engine_state.c  api_init_reset_task_state.c  api_init_reset_worker_state.c  api_init_rollback.c  api_init_rollback_workers.c  api_init_sandbox.c  api_init_task_queue.c  api_init_worker_prepare.c  api_init_workers.c  api_job.c  api_job_begin.c  api_job_decode_input.c  api_job_finish_output.c  api_job_finish_output_file.c  api_job_finish_output_pdf.c  api_job_finish_stage.c  api_job_impl_legacy.txt  api_job_init_ctx.c  api_job_load_input.c  api_job_output_legacy.txt  api_job_postfx.c  api_job_prepare_render_stage.c  api_job_release_input.c  api_job_render_output.c  api_job_run.c  api_job_run_raw.c  api_job_run_rgb24.c  api_job_write_buffer.c  api_lifecycle.c  api_pdf_output.c  api_process.c  (+18 more)
imgengine/src/cold/: debug.c  debug.h  error.c  error.h  pipeline_compiled.c  pipeline_compiled_removed.c  validation.c  validation.h
imgengine/src/core/: batch_builder.c  buffer_lifecycle.c  config.c  config.h  context.c  context.h  context_create.c  context_destroy.c  dispatcher.c  dispatcher.h  image.c  image.h  img_pipeline.c  init.c  init.h  lbit_avx2.c  memory_pool.c
imgengine/src/hot/: batch.h  batch_engine.c  batch_engine.h  batch_exec.c  pipeline_exec.c  pipeline_exec.h  pixel_ops.c  pixel_ops.h
imgengine/src/io/: image_io.c  io_register.c  stb_impl.c
imgengine/src/layout/: auto_fit.c  crop_marks.c  grid_layout.c
imgengine/src/memory/: arena.c  arena_alloc.c  arena_alloc_aligned.c  arena_create.c  arena_destroy.c  arena_reset.c  hugepage.c  numa.c  slab.c  slab_block_size.c  slab_create.c  slab_destroy.c  slab_hot.c  (+1 more)
imgengine/tests/: test_helpers.h
md/: RFC.md
(+233 files in other folders)
